--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -44,7 +44,7 @@ $git-brand-colour: #159964;
 // @import "components/autocomplete";
 // @import "components/copy-content";
 // @import "components/description-list";
-// @import "components/inset-text";
+@import "components/inset-text";
 // @import "components/link";
 // @import "components/list";
 // @import "components/map";
