Update course details

--- a/app/views/courses/_sub-navigation.njk
+++ b/app/views/courses/_sub-navigation.njk
@@ -1,7 +1,7 @@
 {{ appSubNavigation({
   label: "Sub navigation",
   items: [{
-    text: "Details",
+    text: "Basic details",
     href: actions.details,
     active: true if subNavId == "details"
   }, {
