Update organisation list

--- a/app/views/organisations/list.njk
+++ b/app/views/organisations/list.njk
@@ -23,7 +23,7 @@
       <ul class="govuk-list govuk-list--spaced">
         {% for organisation in organisations %}
           <li>
-            <a class="govuk-link" href="/organisations/{{ organisation.code }}">
+            <a class="govuk-link" href="/organisations/{{ organisation.id }}">
               {{ organisation.name }}
             </a>
           </li>
