Update status tags

--- a/app/views/courses/_sidebar.njk
+++ b/app/views/courses/_sidebar.njk
@@ -4,8 +4,8 @@
 
     <p class="govuk-body">
       {{ govukTag({
-        text: "Empty",
-        classes: "govuk-tag--grey app-tag--grey"
+        text: course.status | getCourseStatusLabel,
+        classes: course.status | getCourseStatusClasses
       }) }}
     </p>
 
