Update subject label for plurals

--- a/app/views/courses/details.njk
+++ b/app/views/courses/details.njk
@@ -97,7 +97,7 @@
           },
           {
             key: {
-              text: "Subject"
+              text: "Subject" + ("s" if course.subjects.length > 1)
             },
             value: {
               html: subjectHtml
