Update details and description

--- a/app/views/courses/description.njk
+++ b/app/views/courses/description.njk
@@ -130,7 +130,7 @@
               text: "Fee for UK student"
             },
             value: {
-              text: course.feesUK | numeral('0,0.[00]') if course.feesUK else "Not entered",
+              text: "£" + course.feesUK | numeral('0,0.[00]') if course.feesUK else "Not entered",
               classes: "govuk-hint" if not course.feesUK
             },
             actions: {
@@ -148,7 +148,7 @@
               text: "Fee for international students (optional)"
             },
             value: {
-              text: course.feesInternational if course.feesInternational else "Not entered",
+              text: "£" + course.feesInternational if course.feesInternational else "Not entered",
               classes: "govuk-hint" if not course.feesInternational
             },
             actions: {
