--- a/app/views/courses/details.njk
+++ b/app/views/courses/details.njk
@@ -67,20 +67,11 @@
             },
             value: {
               text: course.subjectLevel | getSubjectLevelLabel
-            },
-            actions: {
-              items: [
-                {
-                  href: actions.change + "/subject-level?referrer=details",
-                  text: "Change",
-                  visuallyHiddenText: "subject level"
-                }
-              ]
             }
           },
           {
             key: {
-              text: "Special educational needs and disability (SEND)"
+              text: "Special educational needs and disability (SEND) specialism"
             },
             value: {
               text: course.isSend | getSendLabel
