--- a/app/views/courses/details.njk
+++ b/app/views/courses/details.njk
@@ -244,7 +244,7 @@
               text: "Applications open date"
             },
             value: {
-              text: "PLACEHOLDER"
+              text: (course.applicationsOpenDate if course.applicationsOpenDate else data.currentCycle.applyOpens) | date("dd MMMM yyyy")
             },
             actions: {
               items: [
