Update course details

--- a/app/views/courses/details.njk
+++ b/app/views/courses/details.njk
@@ -79,7 +79,7 @@
             actions: {
               items: [
                 {
-                  href: actions.change + "/subject-level?referrer=details",
+                  href: actions.change + "/special-educational-needs-disability?referrer=details",
                   text: "Change",
                   visuallyHiddenText: "special educational needs and disability (SEND)"
                 }
