--- a/app/views/courses/funding-type.njk
+++ b/app/views/courses/funding-type.njk
@@ -1,7 +1,12 @@
 {% extends "_layout.njk" %}
 
-{% set caption = "Add course" %}
 {% set title = ("Error: " if errors) + "Is it fee paying or salaried?" %}
+
+{% if course %}
+  {% set caption = course.name + " (" + course.code + ")" %}
+{% else %}
+  {% set caption = "Add course" %}
+{% endif %}
 
 {% block beforeContent %}
 {{ govukBackLink({
