--- a/app/views/courses/subject-level.njk
+++ b/app/views/courses/subject-level.njk
@@ -1,12 +1,16 @@
 {% extends "_layout.njk" %}
 
-{% set title = ("Error: " if errors) + "What type of course?" %}
+{% set title = "What type of course?" %}
 
 {% if course %}
   {% set caption = course.name + " (" + course.code + ")" %}
 {% else %}
   {% set caption = "Add course" %}
 {% endif %}
+
+{% block pageTitle %}
+  ("Error: " if errors) + {{ title + " - " if title }}{{ caption + " - " if caption }}{{ serviceName }} - GOV.UK
+{% endblock %}
 
 {% block beforeContent %}
 {{ govukBackLink({
