Update button labels depending on new or edit course

--- a/app/views/courses/age-range.njk
+++ b/app/views/courses/age-range.njk
@@ -95,9 +95,15 @@
 
         </div>
 
-        {{ govukButton({
-          text: "Continue"
-        }) }}
+        {% if course %}
+          {{ govukButton({
+            text: "Update age range"
+          }) }}
+        {% else %}
+          {{ govukButton({
+            text: "Continue"
+          }) }}
+        {% endif %}
 
       </form>
 
