--- a/app/views/courses/special-educational-needs-disability.njk
+++ b/app/views/courses/special-educational-needs-disability.njk
@@ -44,9 +44,15 @@
           items: sendOptions
         }) }}
 
-        {{ govukButton({
-          text: "Continue"
-        }) }}
+        {% if course %}
+          {{ govukButton({
+            text: "Update SEND specialism"
+          }) }}
+        {% else %}
+          {{ govukButton({
+            text: "Continue"
+          }) }}
+        {% endif %}
 
       </form>
 
