--- a/app/views/courses/accredited-body.njk
+++ b/app/views/courses/accredited-body.njk
@@ -95,9 +95,15 @@
 
         </div>
 
-        {{ govukButton({
-          text: "Continue"
-        }) }}
+        {% if course %}
+          {{ govukButton({
+            text: "Update accredited body"
+          }) }}
+        {% else %}
+          {{ govukButton({
+            text: "Continue"
+          }) }}
+        {% endif %}
 
       </form>
 
