--- a/app/views/courses/location.njk
+++ b/app/views/courses/location.njk
@@ -49,9 +49,15 @@
           items: locationOptions
         }) }}
 
-        {{ govukButton({
-          text: "Continue"
-        }) }}
+        {% if course %}
+          {{ govukButton({
+            text: "Update location"
+          }) }}
+        {% else %}
+          {{ govukButton({
+            text: "Continue"
+          }) }}
+        {% endif %}
 
       </form>
 
