--- a/app/views/courses/subject-level.njk
+++ b/app/views/courses/subject-level.njk
@@ -61,9 +61,15 @@
           items: sendOptions
         }) }}
 
-        {{ govukButton({
-          text: "Continue"
-        }) }}
+        {% if course %}
+          {{ govukButton({
+            text: "Update subject level"
+          }) }}
+        {% else %}
+          {{ govukButton({
+            text: "Continue"
+          }) }}
+        {% endif %}
 
       </form>
 
