--- a/app/views/courses/details.njk
+++ b/app/views/courses/details.njk
@@ -13,6 +13,9 @@
 {% endblock %}
 
 {% block content %}
+
+  {% include "_includes/notification-banner.njk" %}
+
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
